--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.24.0",
@@ -24,8 +26,10 @@
   },
   "dependencies": {
     "@calpoly/mustang": "^1.0.11",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0"
   }
 }
