lab 15 submission idk if it's good lol

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,11 +2,17 @@
   "name": "server",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "exports": {
+    "./models": {
+      "import": "./src/models/index.ts"
+    }
+  },
   "scripts": {
     "dev": "nodemon",
     "build": "npx etsc",
     "start": "npm run build && npm run start:node",
     "start:node": "node dist/index.js",
+    "start:app": "cross-env STATIC=../app/dist npm run start",
     "start:proto": "cross-env STATIC=../proto/public npm run start",
     "check": "tsc --noEmit"
   },
