--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,8 +11,9 @@
     "dev": "nodemon",
     "build": "npx etsc",
     "start": "npm run build && npm run start:node",
-    "start:node": "node dist/index.js",
+    "start:api": "cross-env STATIC=./public npm run start",
     "start:app": "cross-env STATIC=../app/dist npm run start",
+    "start:node": "node dist/index.js",
     "start:proto": "cross-env STATIC=../proto/public npm run start",
     "check": "tsc --noEmit"
   },
